# csynth

./: .gitignore  CMakeLists.txt
src/: buffer.c  buffer.h  error.h  main.c  playback.c  playback.h  rack.c  rack.h  synth.c  synth.h
src/modules/: arith.c  arith.h  wave.c  wave.h
